--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Generic</module>
         <module>cnn</module>
+        <module>hotels</module>
     </modules>
 
     <dependencyManagement>
